--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.44",
     "googleapis": "^126.0.1",
     "next": "13.5.6",
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.13.0",
     "qrcode": "^1.5.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@napi-rs/canvas": "^0.1.44"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.50.0",
