最新（変更dev分）

--- a/.env.local
+++ b/.env.local
@@ -18,3 +18,4 @@ SLACK_WEBHOOK_URL=https://hooks.slack.com/services/T09A3QZ0CNR/B099YED95R9/XPfHV
 
 BASIC_AUTH_USER=ivf
 BASIC_AUTH_PASSWORD=ivf
+NEXT_PUBLIC_ADMIN_PASSWORD=soraadmin2025
